// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormMessage component applies withBackground class 1`] = `
<div>
  <div
    class="FormMessage InfoMessage Global"
    data-testid="sh-form-message"
  >
    <svg
      class="FormMessageIcon"
      data-testid="sh-form-message-icon-info"
    >
      mock-svg
    </svg>
    <span
      class="small-text FormMessageText"
    >
      With background
    </span>
  </div>
</div>
`;

exports[`FormMessage component renders error type 1`] = `
<div>
  <div
    class="FormMessage ErrorMessage"
    data-testid="sh-form-message"
  >
    <svg
      class="FormMessageIcon"
      data-testid="sh-form-message-icon-error"
    >
      mock-svg
    </svg>
    <span
      class="small-text FormMessageText"
    >
      Error!
    </span>
  </div>
</div>
`;

exports[`FormMessage component renders info message by default 1`] = `
<div>
  <div
    class="FormMessage InfoMessage"
    data-testid="sh-form-message"
  >
    <svg
      class="FormMessageIcon"
      data-testid="sh-form-message-icon-info"
    >
      mock-svg
    </svg>
    <span
      class="small-text FormMessageText"
    >
      Info message
    </span>
  </div>
</div>
`;

exports[`FormMessage component renders message text 1`] = `
<div>
  <div
    class="FormMessage InfoMessage"
    data-testid="sh-form-message"
  >
    <svg
      class="FormMessageIcon"
      data-testid="sh-form-message-icon-info"
    >
      mock-svg
    </svg>
    <span
      class="small-text FormMessageText"
    >
      Hello world
    </span>
  </div>
</div>
`;

exports[`FormMessage component renders warning type 1`] = `
<div>
  <div
    class="FormMessage WarningMessage"
    data-testid="sh-form-message"
  >
    <svg
      class="FormMessageIcon"
      data-testid="sh-form-message-icon-warning"
    >
      mock-svg
    </svg>
    <span
      class="small-text FormMessageText"
    >
      Warn
    </span>
  </div>
</div>
`;
